# Qt6ProjectTemplate

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Qml/: Main.qml
Qml/Style/: CMakeLists.txt  FAIcons.qml  Style.qml  TextFontAwesome.qml
Qml/Style/Impl/: FontIconSize.qml
Qml/Style/Src/: BindableVar.cpp  BindableVar.h  PlatformTools.h
Res/: CMakeLists.txt
Res/iOS/: Info.plist.in
Src/: main.cpp
android/: AndroidManifest.xml
